# Lighchain-BlockChain

./: .env  .env.example  .env.production  .gitignore  BACKUP_README.md  Cargo.toml  FUNDING_SETUP.md  Get-ChildItem -Path.yaml  INTRODUCTION.md  METAMASK_INTEGRATION.md  README.md  backup-log.txt  backup-script.ps1  backup.bat  config.toml  dedication.html  genesis.json  hardhat.config.js  package-lock.json  package.json  run.ps1  setup.ps1  start-tiktok-api.js  test-api.js  vercel.json
api-server/: package.json
api-server/api/: funding.js  index.js
blockchain/: Cargo.toml
blockchain/src/: ai_module.rs  bantay_panahon.rs  block.rs  blockchain.rs  bridge_api.rs  cli-fixed.js  cli.js  dedication.rs  did.js  environment.rs  governance.rs  index.js  integration_service.rs  main.rs  pagasa_api.rs  phase2-demo.js  phase3-demo-fixed.js  phase3-demo.js  privacy_manager.rs  tiktok-demo.js  transaction.rs  wallet_integration.rs
blockchain/src/credentials/: verifiable-credential.js
blockchain/src/crypto/: zkp-system.js
blockchain/src/marketplace/: api-server.js  customer-onboarding.js  file-hosting-service.js  product-authenticity.js  schemas.js  tiktok-api.js  tiktok-marketplace.js
blockchain/src/tokenomics/: governance-token.js  veri-token.js
blockchain/src/wallet/: lightpay-wallet.js  marketplace-wallet.js
smart-contracts/contracts/: VeriTokenV2.sol
smart-contracts/scripts/: deploy-veritoken-v2.js  deploy.js
web-frontend/public/: creator-dashboard.html  funding.html  index.html  metamask-integration.html  metamask-network-setup.html
(+1 files in other folders)
