[package]
name = "lightchain"
version = "0.1.0"
edition = "2021"
authors = ["GreyWarden"]
description = "LightChain - An environmental governance blockchain system with marketplace integration"
license = "MIT"

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
hex = "0.4"
