[package]
name = "lightchain_bantay_panahon"
version = "1.0.0"
edition = "2021"
authors = ["GreyWarden", "LightChain Team"]
description = "LightChain Bantay Panahon - Environmental governance blockchain with PAGASA integration and marketplace"
license = "MIT"
keywords = ["blockchain", "environmental", "governance", "pagasa", "philippines"]

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
# AI and Machine Learning
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"
# Additional utilities
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
